Bug 901290 - Cycle collect more than just at worker shutdown. r=mccr8, a=akeybl